# aegis-new

./: .gitignore
docs/: database-ai-reference.md  (+3 more)
src/backend/: .env.example  .gitignore  README.md  apply_migration.py  main.py  pyproject.toml  read_quotes.py  test_db_connection.py
src/backend/app/: main.py
src/backend/app/api/: dependencies.py  errors.py  router.py
src/backend/app/api/v1/: router.py
src/backend/app/bootstrap/: container.py
src/backend/app/core/: config.py  logging.py
src/backend/app/domain/data_snapshots/: __init__.py  catalog.py  entities.py  enums.py  repository.py  schemas.py  service.py
src/backend/app/domain/identity/: __init__.py  entities.py
src/backend/app/domain/reference/: __init__.py  entities.py  repository.py  schemas.py  service.py
src/backend/app/domain/shared/: entities.py  errors.py  service.py
src/backend/app/domain/trades/: entities.py  enums.py  repository.py  schemas.py  service.py
src/backend/app/infrastructure/identity/: __init__.py  entra.py
src/backend/scripts/: create_db.py  populate_db.py
src/backend/src/api/: app.py  dependencies.py
src/backend/src/api/routes/: nav.py  recap.py  subred.py
src/backend/src/client/: libapi.py
src/backend/src/config/: schema.py  tenant.py
src/backend/src/models/: subred.py
src/backend/src/repositories/base/: subred.py
src/backend/src/repositories/local/: subred.py
src/backend/src/repositories/remote/: subred.py
src/backend/src/services/: recap_service.py  subred_service.py
src/backend/src/utils/: data_io.py  dates.py  email.py  formatters.py  logger.py
(+84 files in other folders)
